The message that's displayed when hovering over an event card while Forecast Placement is prompted now indicates that the Forecast must be completed before doing anything else. Fixed an issue where hovering over the player discard pile during event card removal would interrupt the removal animation -- player discard pile hover events are now disabled during the event card removal animation. Fixed an alignment issue with the Contingency Planner's special ability tag.

--- a/style.css
+++ b/style.css
@@ -991,6 +991,7 @@ span.r {color: #ef282a; background: none}
 	padding: 0;
 	min-height: 45px;
 }
+.discardSelections .specialAbilityTag { width: 94% }
 .discardPrompt .cardsToKeep
 {
 	min-height: 45px;
